--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+    <hr>
+  <a href="#" onclick="signOut();">Sign out</a>
+<script>
+  function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      console.log('User signed out.');
+    });
+  }
+</script>
+
     <script>
       function onSignIn(googleUser) {
         // Useful data for your client-side scripts:
